# congress-data-automator

./: .env.example  .gitignore  119TH_CONGRESS_COMPLETION_SUMMARY.md  119TH_CONGRESS_LEADERSHIP_FIX_PLAN.md  119TH_CONGRESS_UPDATE_PLAN.md  119th_congress_data_20250708_125228.json  119th_congress_scraper.py  119th_congress_validation_report_20250708_125922.json  815_committee_deployment_20250709_121516.sql  815_committee_deployment_corrected_20250709_122135.sql  815_deployment_results_20250709_121721.json  815_deployment_results_20250709_121934.json  815_deployment_results_20250709_122015.json  815_deployment_results_20250709_122210.json  815_deployment_summary_20250709_121516.json  CHANGELOG.md  CONTINUATION_PLAN.md  CONTINUATION_SUMMARY.md  CORE_FOUNDATION_QA_SUMMARY.md  CRITICAL_FILTER_DEBUG_PLAN.md  CURRENT_PLAN.md  CURRENT_SESSION_PLAN.md  CURRENT_STATUS_AND_NEXT_STEPS.md  CURRENT_STATUS_SUMMARY.md  DATA_INTEGRITY_ASSESSMENT_COMPLETE.md  DATA_QUALITY_IMPROVEMENT_PLAN.md  DATA_QUALITY_IMPROVEMENT_SUMMARY.md  DATA_QUALITY_REMEDIATION_COMPLETE.md  DEPLOYMENT.md  DEPLOYMENT_ALTERNATIVES.md  DEPLOYMENT_COMPLETION_STATUS.md  DEPLOYMENT_COMPLETION_SUMMARY.md  DEPLOYMENT_OPTIONS_GUIDE.md  DEPLOYMENT_READY_SUMMARY.md  DESIGN_OVERHAUL_PLAN.md  DESIGN_OVERHAUL_SUMMARY.md  DNS_QUICK_REFERENCE.md  EMERGENCY_DATA_PLAN.md  EMERGENCY_EXECUTION_PLAN.md  ENHANCEMENT_IMPLEMENTATION_PLAN.md  (+471 more)
.github/workflows/: ci-cd.yml  deploy-api.yml
.memex/: settings.yml
backend/: Dockerfile  cloudbuild.yaml  requirements.txt
backend/app/: __init__.py  main.py
backend/editor/: app.py
backend/scrapers/: __init__.py  base_scraper.py  house_scraper.py  senate_scraper.py
backend/tests/: conftest.py  (+2 more)
backups/: backup_20250709_180941.sql  backup_placeholder_20250709_180841.txt
data_api/: Dockerfile  main.py  requirements.txt
docs/: api.md  architecture.md  development.md
evidence/: sources.md
frontend/: package-lock.json  package.json
infrastructure/: merge_duplicates.sql  populate_banking_committee_20250710.sql  populate_commerce_committee_20250710.sql  populate_judiciary_committee_20250710.sql  populate_judiciary_committee_final.sql  populate_judiciary_committee_manual.sql  populate_judiciary_committee_manual_corrected.sql  scheduler.yaml  schema_overhaul.sql
scripts/: curate_banking_committee.py  curate_commerce_committee.py  curate_finance_committee.py  curate_judiciary_committee.py  setup-monitoring.sh  update_hearing_schema.py
services/: alert_system.py  automated_update_triggers.py  congressional_session_monitor.py  data_freshness_validator.py  monitoring_dashboard.py  system_health_monitor.py
services/api/: .dockerignore  .env.example  .env.production.template  .env.staging  .gitignore  DEPLOYMENT_GUIDE.md  Dockerfile  Dockerfile.optimized  Dockerfile.production  README.md  alert_rules.yml  build.sh  cloudbuild.yaml  comprehensive_endpoint_results_20250707_230042.json  deploy-cloud.sh  deploy.sh  docker-compose.production.yml  docker-compose.yml  error_handling_results_20250707_230212.json  fix_datetime_format.py  fix_pydantic_v2.py  integration_test_results.md  main.py  migrate_to_postgres.py  nginx.conf  performance_benchmarks_20250707_230359.json  phase3b_complete_results.md  phase3b_step5_results.json  phase3c_improvement_results_20250707_234805.json  populate_test_data.py  prometheus.yml  pyproject.toml  railway.json  relationship_integrity_results_20250707_225354.json  relationship_integrity_results_20250707_225901.json  render.yaml  requirements.txt  run_production_tests.py  test_all_endpoints.py  test_endpoint_comprehensive.py  (+4 more)
services/api/api/: __init__.py  app.py  monitoring.py
services/api/api/core/: __init__.py  config.py  exceptions.py  logging.py  security.py  validators.py
services/api/api/database/: __init__.py  connection.py  models.py  repositories.py
services/api/api/endpoints/: __init__.py  committees.py  hearings.py  members.py  monitoring.py  search.py  statistics.py
services/api/api/models/: __init__.py  base.py  congress.py
services/api/api/utils/: __init__.py
services/api/grafana/provisioning/dashboards/: congressional-api-dashboard.json
services/api/grafana/provisioning/datasources/: datasources.yml
services/api/k8s/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  secret.yaml  service.yaml
services/api/terraform/: main.tf  terraform.tfvars.example
services/api/tests/: __init__.py  conftest.py  load_test.js  security_test.py  test_main.py
services/ingestion/: Dockerfile  README.md  main.py  pyproject.toml
services/ingestion/ingestion/: __init__.py
services/ingestion/ingestion/collectors/: __init__.py  congress_api.py  web_scraping.py
services/ingestion/ingestion/core/: __init__.py  config.py  database.py  logging.py
services/ingestion/ingestion/models/: __init__.py  staging.py
services/ingestion/ingestion/processors/: __init__.py  data_processor.py
services/validation/: .coverage  .env.example  Dockerfile  README.md  main.py  pyproject.toml
services/validation/tests/: __init__.py
services/validation/tests/unit/: __init__.py  test_config.py  test_expectations.py  test_models.py
services/validation/validation/: __init__.py  cli.py
services/validation/validation/api/: __init__.py  app.py
services/validation/validation/core/: __init__.py  config.py  database.py  logging.py
services/validation/validation/expectations/: __init__.py  manager.py  suites.py
services/validation/validation/models/: __init__.py  base.py  congressional.py
services/validation/validation/pipelines/: __init__.py  assets.py  definitions.py  jobs.py  resources.py
(+141 files in other folders)
